# budget-script

./: .gitignore  README.md  load_plist.sh  main.py  pyproject.toml
examples/instructions/: accounts.json  csv_management.json
examples/job/: com.name.script-name.plist  run_script.sh
helpers/: csv_mgmt.py  messages.py  report.py  scraper.py
